syntax = "proto3";

package dastchain.dex;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dastchain/dex/params.proto";
import "dastchain/dex/sell_order_book.proto";
import "dastchain/dex/buy_order_book.proto";
import "dastchain/dex/denom_trace.proto";

option go_package = "dastchain/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dastchain/dex/params";
  
  }
  
  // Queries a list of SellOrderBook items.
  rpc SellOrderBook    (QueryGetSellOrderBookRequest) returns (QueryGetSellOrderBookResponse) {
    option (google.api.http).get = "/dastchain/dex/sell_order_book/{index}";
  
  }
  rpc SellOrderBookAll (QueryAllSellOrderBookRequest) returns (QueryAllSellOrderBookResponse) {
    option (google.api.http).get = "/dastchain/dex/sell_order_book";
  
  }
  
  // Queries a list of BuyOrderBook items.
  rpc BuyOrderBook    (QueryGetBuyOrderBookRequest) returns (QueryGetBuyOrderBookResponse) {
    option (google.api.http).get = "/dastchain/dex/buy_order_book/{index}";
  
  }
  rpc BuyOrderBookAll (QueryAllBuyOrderBookRequest) returns (QueryAllBuyOrderBookResponse) {
    option (google.api.http).get = "/dastchain/dex/buy_order_book";
  
  }
  
  // Queries a list of DenomTrace items.
  rpc DenomTrace    (QueryGetDenomTraceRequest) returns (QueryGetDenomTraceResponse) {
    option (google.api.http).get = "/dastchain/dex/denom_trace/{index}";
  
  }
  rpc DenomTraceAll (QueryAllDenomTraceRequest) returns (QueryAllDenomTraceResponse) {
    option (google.api.http).get = "/dastchain/dex/denom_trace";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSellOrderBookRequest {
  string index = 1;
}

message QueryGetSellOrderBookResponse {
  SellOrderBook sellOrderBook = 1 [(gogoproto.nullable) = false];
}

message QueryAllSellOrderBookRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSellOrderBookResponse {
  repeated SellOrderBook                          sellOrderBook = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination    = 2;
}

message QueryGetBuyOrderBookRequest {
  string index = 1;
}

message QueryGetBuyOrderBookResponse {
  BuyOrderBook buyOrderBook = 1 [(gogoproto.nullable) = false];
}

message QueryAllBuyOrderBookRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBuyOrderBookResponse {
  repeated BuyOrderBook                           buyOrderBook = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination   = 2;
}

message QueryGetDenomTraceRequest {
  string index = 1;
}

message QueryGetDenomTraceResponse {
  DenomTrace denomTrace = 1 [(gogoproto.nullable) = false];
}

message QueryAllDenomTraceRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDenomTraceResponse {
  repeated DenomTrace                             denomTrace = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

